Raised button: Fix overflow; add octo

--- a/button/raised/styles.css
+++ b/button/raised/styles.css
@@ -1,29 +1,32 @@
+/* body {
+    margin: 0;
+} */
+
 label, input {
     font-size: 1em;
+    margin-top: var(--shadow-offset-y);
+    margin-bottom: var(--shadow-offset-y);
 }
 
 input[type=button] {
     padding: 0.1em 0.4em;
     border: 1px solid black;
     border-radius: 0.2em;
-    --shadow-offset: 0.1em;
-    --shadow-offset-x: var(--shadow-offset);
-    --y-to-x-ratio: tan(60deg);
-    --shadow-offset-y: calc(var(--shadow-offset) * var(--y-to-x-ratio));
-    --shadow-offset-active: 0.025em;
+    --shadow-offset-active: 0.02em;
     --shadow-offset-active-x: var(--shadow-offset-active);
     --shadow-offset-active-y: calc(var(--shadow-offset-active) * var(--y-to-x-ratio));
     --translate-active: calc(var(--shadow-offset) - var(--shadow-offset-active));
     --translate-active-x: var(--translate-active);
     --translate-active-y: calc(var(--translate-active) * var(--y-to-x-ratio));
-    box-shadow: var(--shadow-offset-x) var(--shadow-offset-y) 0 0 rgb(223, 0, 0);
+    box-shadow: var(--shadow-offset-x) var(--shadow-offset-y) 0 0 rgba(0, 0, 0, 0.5);
 }
 input[type=button]:hover {
     background-color: white;
 }
 input[type=button]:active {
+    background-color: rgb(244, 255, 255);
     transform: translate(var(--translate-active-x), var(--translate-active-y));
-    box-shadow: var(--shadow-offset-active-x) var(--shadow-offset-active-y) 0 0 rgb(255, 0, 0);
+    box-shadow: var(--shadow-offset-active-x) var(--shadow-offset-active-y) 0.1em 0.01em aqua;
 }
 
 .double {
@@ -34,13 +37,21 @@ input[type=button]:active {
     font-size: 4rem;
 }
 
+.octuple  {
+    font-size: 8rem;
+}
+
 .buttons {
     display: grid;
-    grid-template-columns: minmax(0, max-content) 1fr;
-    overflow-y: visible;
+    grid-template-columns: minmax(0, max-content) 1fr 0fr;
     row-gap: 1rem;
     column-gap: 1rem;
     align-items: center;
+    --shadow-offset: 0.1em;
+    --shadow-offset-x: var(--shadow-offset);
+    --y-to-x-ratio: tan(60deg);
+    --shadow-offset-y: calc(var(--shadow-offset) * var(--y-to-x-ratio));
+    overflow-x: hidden;
 }
 
 .button {
